# metering-chain

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  deploy-pages.yml
.local/: blockchain_design.md  ddd_references.md  tool_plan.md  wallet_design.md
docs/: PRE_RELEASE_CHECKLIST.md  RELEASE_NOTES.md  architecture.md  architecture_hook_flow.md  benchmark_baseline.md  closure_scope.md  domain_model_patterns.md  domain_spec.md  error_codes.md  final_demo.md  invariant_test_matrix.md  invariants.md  naming_conventions.md  phase2_signatures.md  phase4_extension_points.md  replay_audit_runbook.md  state_transitions.md  ubiquitous_language.md  utils_requirements.md  validation_flow.md  version_compatibility_matrix.md
examples/: README.md  hook_demo.rs  settlement_demo.rs
examples/depin/: .env.example  README.md  fetch_sim_activity.sh  sim_activity_to_consume.rs  sim_activity_to_consume.sh
examples/multi_operator/: README.md  analyze_rewards.py  fetch_dune_iot_transfers.py  helium_rewards_to_consume.py  requirements.txt  sample_rewards.csv
examples/phase3_demo/: README.md  run_phase3_demo.sh
examples/phase3_dune_demo/: .gitignore  README.md  result_summary_template.md  (+2 more)
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
src/: cli.rs  config.rs  error.rs  evidence.rs  lib.rs  logger.rs  main.rs  replay.rs  wallet.rs
tests/: basic_flow.rs  cli_smoke.rs  compatibility.rs  perf_smoke.rs  property_invariants.rs  replay_recovery.rs  security_abuse.rs
(+87 files in other folders)
