[package]
name = "metering-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
num-bigint = "0.4"
hex = "0.4"
sha2 = "0.10"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"
