[package]
name = "metering-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
num-bigint = "0.4"
hex = "0.4"
sha2 = "0.10"
bincode = "1.3"
serde_json = "1.0.149"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
bs58 = "0.5"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "sim-activity-to-consume"
path = "examples/depin/sim_activity_to_consume.rs"
